--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,15 @@
 [project]
-name = "riceround_cloud"
+name = "comfyui_riceround"
 description = "A tool for generating encrypted workflows and commercializing AI nodes for ComfyUI."
-version = "1.2.1"
+version = "1.1.0"
 license = {file = "LICENSE"}
 dependencies = ["aiohttp", "pyzipper", "websockets", "portalocker", "tomlkit"]
 
 [project.urls]
-Repository = "https://github.com/RiceRound/ComfyUI_RiceRound_Cloud"
+Repository = "https://github.com/RiceRound/ComfyUI_RiceRound"
+#  Used by Comfy Registry https://comfyregistry.org
 
 [tool.comfy]
 PublisherId = "riceround"
-DisplayName = "ComfyUI_RiceRoundCloud"
+DisplayName = "ComfyUI_RiceRound"
 Icon = "https://www.riceround.online/RiceRound.ico"
